Environment ready and linked with Angular 6

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ Django
 social-auth-app-django
 django-extensions
 django-bootstrap3
+django-localflavor
+djangorestframework
+markdown
+django-filter
+django-cors-headers
